--- a/MedicalFurnitureAccounting.csproj
+++ b/MedicalFurnitureAccounting.csproj
@@ -17,8 +17,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="identifier.sqlite">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <None Update="MedicalFurnitureAccounting.db">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
