--- a/MedicalFurnitureAccounting.csproj
+++ b/MedicalFurnitureAccounting.csproj
@@ -9,6 +9,18 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <COMReference Include="Microsoft.Office.Interop.Word">
+        <WrapperTool>tlbimp</WrapperTool>
+        <VersionMinor>7</VersionMinor>
+        <VersionMajor>8</VersionMajor>
+        <Guid>00020905-0000-0000-c000-000000000046</Guid>
+        <Lcid>0</Lcid>
+        <Isolated>false</Isolated>
+        <EmbedInteropTypes>true</EmbedInteropTypes>
+      </COMReference>
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.2.24128.4">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
