--- a/MedicalFurnitureAccounting.csproj
+++ b/MedicalFurnitureAccounting.csproj
@@ -39,7 +39,19 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Update="AcceptanceAct.docx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Inventory.doc">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Lable.docx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
       <None Update="MedicalFurnitureAccounting.db">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="AcceptanceAct.doc">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
