feat: add tables

--- a/MedicalFurnitureAccounting.csproj
+++ b/MedicalFurnitureAccounting.csproj
@@ -32,6 +32,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Compile Update="Pages\CellPage.xaml.cs">
+        <SubType>Code</SubType>
+      </Compile>
+      <Compile Update="Pages\ShelvingPage.xaml.cs">
+        <SubType>Code</SubType>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
       <Page Update="Modals\AddMaterialModal.xaml">
         <Generator>MSBuild:Compile</Generator>
         <XamlRuntime>Wpf</XamlRuntime>
